<resources>
    <string name="app_name">SideHustle</string>
    <string name="title_activity_employee_main_acitivty">EmployeeMainActivity</string>
    <string name="profile_avatar_description">Profile Avatar</string>
    <string name="employee_toolbar_search_hint">How much you can earn today?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_description_approved_date">Working Date(s)</string>
    <string name="ic_description_approved_time">Working Period</string>
    <string name="ic_description_applicants_num">Number of Applicants</string>
    <string name="ic_description_offered_wages">Offered Wages</string>
    <string name="ic_description_requirements">Requirement</string>
    <string name="ic_description_company_location">Company Location</string>
    <string name="ic_description_rating">Rating</string>
    <string name="ic_description_home">Home</string>
    <string name="ic_description_my_jobs">My Jobs</string>
    <string name="ic_description_my_profile">My Profile</string>
    <string name="ic_description_employee_num">Number of Employees</string>
    <string name="ic_description_employee_wages">Wages</string>
    <string name="ic_description_requirement">Requirement(s)</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_job_details">Job Details</string>
    <string name="title_approved_jobs">Approved Jobs</string>
    <string name="title_pending_approval">Pending Approval</string>
    <string name="title_requirements">Requirements</string>
    <string name="title_description">Description</string>
    <string name="title_employee">Employees</string>
    <string name="title_employee_details">Employee Details</string>
    <string name="title_comment">Comment</string>
    <string name="title_supporting_document">Supporting Document(s)</string>
    <string name="title_languages">Languages</string>
    <string name="title_review_and_comment">Reviews and Comments</string>
    <string name="title_applicant_details">Applicant Details</string>
    <string name="title_proficiency">Proficiency</string>
    <string name="title_pending_comment">Pending Comment:</string>
    <string name="title_rating">Rating</string>
    <string name="title_location_url">Location URL</string>
    <string name="title_job_title">Job Tittle</string>
    <string name="title_wages">Wages</string>
    <string name="title_working_time">Working Time</string>
    <string name="title_working_date">Working Date</string>
    <string name="title_one_day">One Day</string>
    <string name="title_to">to</string>
    <string name="title_address">Address</string>
    <string name="title_expected_pay">Expected Pay</string>
    <string name="title_negotiate">Negotiate</string>
    <string name="title_offered_pay">Offered Pay</string>
    <string name="title_applicant_list">Applicants List</string>
    <string name="title_comment_rate">Comment and Rate</string>
    <string name="hint_input_job_title">Enter a job tittle</string>
    <string name="hint_input_date">DD/MM/YYYY</string>
    <string name="hint_input_address">address</string>
    <string name="hint_input_address_2">address 2</string>
    <string name="hint_input_postcode">postcode</string>
    <string name="hint_input_url">Enter location URL (Google Map, Waze, etc)</string>
    <string name="hint_input_requirement">Enter your requirement</string>
    <string name="hint_input_description">Enter your description</string>
    <string name="hint_comment">"Please leave your comment "</string>
    <string name="hint_negotiate_wages">RM ??</string>
    <string name="hint_input_time">00:00</string>
    <string name="hint_upload_document">Upload your document(s) here</string>
    <string name="employer_approved_jobs_position">Singer</string>
    <string name="employer_approved_jobs_wages">RM ??</string>
    <string name="employer_approved_jobs_date">DD/MM/YYYY to DD/MM/YYYY</string>
    <string name="employer_approved_jobs_time">00:00 to 00:00</string>
    <string name="button_description_expand_less">Expand Less</string>
    <string name="button_description_expand_more">Expand Less</string>
    <string name="button_description_upload_job">Upload Job</string>
    <string name="button_description_back">Back</string>
    <string name="button_description_pdf">PDF</string>
    <string name="button_description_plus">Increase</string>
    <string name="button_description_minus">Decrease</string>
    <string name="button_description_favourite">Add to Favourite</string>
    <string name="button_description_add">Add</string>
    <string name="employer_upload_jobs_company_name">Poptics Optometry Sdn Bhd</string>
    <string name="employer_upload_jobs_company_address">Bandar Puteri, Puchong, Selangor</string>
    <string name="employer_upload_jobs_requirement">Hard Working</string>
    <string name="employer_upload_jobs_description">Our company is the best. Come Come</string>
    <string name="button_text_details">Details</string>
    <string name="button_text_close_application">Close Application</string>
    <string name="button_text_delete_post">Delete Post</string>
    <string name="button_text_view_employees">View Employees</string>
    <string name="button_text_view_resume">View Resume</string>
    <string name="button_text_view_applicants">View Applicant</string>
    <string name="button_text_reject">Reject</string>
    <string name="button_text_negotiate">Negotiate</string>
    <string name="button_text_accept">Accept</string>
    <string name="button_text_submit">Submit</string>
    <string name="button_text_reset">Reset</string>
    <string name="button_text_apply_negotiate">Apply / Negotiate</string>
    <string name="button_text_apply">Apply</string>
    <string name="button_text_offer">Offer</string>
    <string name="pic_description_company_logo">Company Logo</string>
    <string name="pic_description_employee_pic">Employee Portrait</string>
    <string name="pic_description_applicant_pic">Applicant Portrait</string>
    <string name="employer_applicants_num">5 / 3</string>
    <string name="employer_employee_num">3</string>
    <string name="tab_text_ongoing">Ongoing</string>
    <string name="tab_text_negotiating">Negotiating</string>
    <string name="tab_text_history">History</string>
    <string name="employee_name">Gan Yee Jing</string>
    <string name="employee_wages">RM ??</string>
    <string name="employee_comment">Comment comment comment</string>
    <string name="employee_language">Japanese</string>
    <string name="employee_proficiency">Excellent</string>
    <string name="ongoing_jobs_position">Lecturer</string>
    <string name="ongoing_jobs_date">DD/MM/YYYY to DD/MM/YYYY</string>
    <string name="ongoing_jobs_time">00:00 to 00:00</string>
    <string name="applicant_name">Yeap Jie Shen</string>
    <string name="applicant_offered_wages">RM ??</string>
    <string name="applicant_application_status">Offer Sent</string>
    <string name="applicant_comment">Im Pro faster accept</string>
    <string name="applicant_language">English</string>
    <string name="applicant_proficiency">Good</string>
    <string name="history_date">DD/MM/YYYY to DD/MM/YYYY</string>
    <string name="history_period">00:00 to 00:00</string>
    <string name="history_position">Bartender</string>
    <string name="history_employee_num">2/5</string>
    <string name="history_portrait">Employee Portrait</string>
    <string name="history_employee_name">Wong Ah Kau</string>
    <string name="history_employee_wages">RM ??</string>
    <string name="history_comment_status">Commented</string>
    <string name="instruction_upload_jobs">Please fill in the details below</string>
    <string name="default_employee_comment_for_employer">This employee does not leaves any comment</string>
    <string name="homeButtonDescription">Home</string>
    <string name="myProfileButtonDescription">My Profile</string>
    <string name="myJobsButtonDescription">My Jobs</string>
    <string name="ongoingTab">Ongoing</string>
    <string name="NegotiatingTab">Negotiating</string>
    <string name="historyTab">History</string>
    <string name="sample_text">Sample Text</string>
    <string name="details_txt">Details</string>
    <string name="favorite_button_description">Favorite Button</string>
    <string name="side_hustle_icon_description">Side Hustle Icon</string>
    <string name="my_profile_txt">My Profile</string>
    <string name="my_profile_name_txt">John Doe</string>
    <string name="upload_resume_txt">Upload Resume</string>
    <string name="settings_txt">Settings</string>
    <string name="reviews_comments_txt"><![CDATA[Reviews & Comments]]></string>
    <string name="lorem_ipsum_txt">Lorem Ipsun dolor sit amet blablabla</string>
    <string name="account_security_txt"><![CDATA[Account & Security]]></string>
    <string name="username_txt">Username</string>
    <string name="app_appearance_txt">App Appearance</string>
    <string name="password_txt">Password</string>
    <string name="theme_txt">Theme</string>
    <string name="font_size_txt">Font Size</string>
    <string name="language_txt">Language</string>
    <string name="others_txt">Others</string>
    <string name="notifications_txt">Notifications</string>
    <string name="contact_us_txt">Contact Us</string>
    <string name="about_txt">About</string>
    <string name="logout_txt">Logout</string>
    <string name="my_resume_txt">My Resume</string>
    <string name="sample_file_name_txt">sample_file.pdf</string>
    <string name="upload_txt">Upload</string>
    <string name="favorite_jobs_txt">Favorite Jobs</string>
    <string name="my_jobs_txt">My Jobs</string>
    <string name="title_activity_employee_my_jobs">EmployeeMyJobsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="waiting_reply_offered_wages">RM ??</string>
    <string name="login_instruction">Please enter your registration email and password</string>
    <string name="login_welcome">Welcome to Side Hustle</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="login_continue">Continue</string>
    <string name="login_or">or</string>
    <string name="login_signupPrompt">Don\'t Have an Account? Sign up here!</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_forgotPassword">Forgot Password?</string>
</resources>