<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_reactangle_white"
    android:paddingLeft="@dimen/list_item_padding"
    android:paddingTop="@dimen/list_item_padding"
    android:paddingRight="@dimen/list_item_padding"
    android:paddingBottom="@dimen/list_item_padding"
    tools:context=".EmployerMyJobsHistoryFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/employer_history_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika_new_basic_bold"
        android:text="@string/history_position"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employer_history_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/backButtonConstraint"
        android:fontFamily="@font/andika"
        android:text="@string/history_date"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/employer_history_calendar"
        app:layout_constraintStart_toEndOf="@+id/employer_history_calendar"
        app:layout_constraintTop_toTopOf="@+id/employer_history_calendar" />

    <ImageView
        android:id="@+id/employer_history_calendar"
        android:layout_width="@dimen/icon_width_height"
        android:layout_height="@dimen/icon_width_height"
        android:layout_marginTop="@dimen/backButtonConstraint"
        android:contentDescription="@string/ic_description_approved_date"
        android:src="@drawable/ic_schedule"
        app:layout_constraintStart_toStartOf="@+id/employer_history_position"
        app:layout_constraintTop_toBottomOf="@+id/employer_history_position"
        app:srcCompat="@drawable/ic_calendar" />

    <Button
        android:id="@+id/employer_history_button"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="@dimen/button_width_height"
        android:backgroundTint="@color/themeColor"
        android:paddingLeft="@dimen/buttonPadding"
        android:paddingTop="@dimen/buttonPadding"
        android:paddingRight="@dimen/buttonPadding"
        android:paddingBottom="@dimen/buttonPadding"
        android:text="@string/button_text_view_employees"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/employer_history_time"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/employer_history_schedule_icon"
        android:layout_width="@dimen/icon_width_height"
        android:layout_height="@dimen/icon_width_height"
        android:layout_marginTop="@dimen/backButtonConstraint"
        android:contentDescription="@string/ic_description_approved_time"
        android:src="@drawable/ic_schedule"
        app:layout_constraintStart_toStartOf="@+id/employer_history_calendar"
        app:layout_constraintTop_toBottomOf="@+id/employer_history_calendar"
        app:srcCompat="@drawable/ic_schedule" />

    <TextView
        android:id="@+id/employer_history_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/history_period"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/employer_history_schedule_icon"
        app:layout_constraintStart_toStartOf="@+id/employer_history_date"
        app:layout_constraintTop_toTopOf="@+id/employer_history_schedule_icon" />

    <ImageView
        android:id="@+id/employer_history_icon"
        android:layout_width="@dimen/icon_width_height"
        android:layout_height="@dimen/icon_width_height"
        android:layout_marginEnd="@dimen/backButtonConstraint"
        android:contentDescription="@string/ic_description_employee_num"
        android:src="@drawable/ic_icon"
        app:layout_constraintEnd_toStartOf="@+id/employer_history_comment_num"
        app:layout_constraintTop_toTopOf="@+id/pendingComment"
        app:srcCompat="@drawable/ic_icon" />

    <TextView
        android:id="@+id/employer_history_comment_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/backButtonConstraint"
        android:fontFamily="@font/andika"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:text="@string/history_employee_num"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/employer_history_icon"
        app:layout_constraintEnd_toEndOf="@+id/employer_history_button" />

    <TextView
        android:id="@+id/pendingComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/backButtonConstraint"
        android:text="@string/title_pending_comment"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/employer_history_icon"
        app:layout_constraintTop_toTopOf="@+id/employer_history_position" />

</androidx.constraintlayout.widget.ConstraintLayout>