<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_reactangle_white"
    android:paddingLeft="@dimen/list_item_padding"
    android:paddingTop="@dimen/list_item_padding"
    android:paddingRight="@dimen/list_item_padding"
    android:paddingBottom="@dimen/list_item_padding"
    tools:context=".EmployerMyJobsOngoingFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/employer_my_jobs_ongoing_listitem_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika_new_basic_bold"
        android:text="@string/ongoing_jobs_position"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employer_my_jobs_ongoing_listitem_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/andika"
        android:text="@string/ongoing_jobs_date"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/employer_my_jobs_ongoing_listitem_ic_calendar"
        app:layout_constraintStart_toEndOf="@+id/employer_my_jobs_ongoing_listitem_ic_calendar"
        app:layout_constraintTop_toTopOf="@+id/employer_my_jobs_ongoing_listitem_ic_calendar" />

    <ImageView
        android:id="@+id/employer_my_jobs_ongoing_listitem_ic_calendar"
        android:layout_width="@dimen/icon_width_height"
        android:layout_height="@dimen/icon_width_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ic_description_approved_date"
        android:src="@drawable/ic_schedule"
        app:layout_constraintStart_toStartOf="@+id/employer_my_jobs_ongoing_listitem_position"
        app:layout_constraintTop_toBottomOf="@+id/employer_my_jobs_ongoing_listitem_position"
        app:srcCompat="@drawable/ic_calendar" />

    <Button
        android:id="@+id/employer_my_jobs_ongoing_listitem_view_details_button"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="@dimen/button_width_height"
        android:backgroundTint="@color/themeColor"
        android:paddingLeft="@dimen/buttonPadding"
        android:paddingTop="@dimen/buttonPadding"
        android:paddingRight="@dimen/buttonPadding"
        android:paddingBottom="@dimen/buttonPadding"
        android:text="@string/button_text_view_employees"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/employer_my_jobs_ongoing_listitem_ic_schedule"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/employer_my_jobs_ongoing_listitem_ic_schedule"
        android:layout_width="@dimen/icon_width_height"
        android:layout_height="@dimen/icon_width_height"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ic_description_approved_time"
        android:src="@drawable/ic_schedule"
        app:layout_constraintStart_toStartOf="@+id/employer_my_jobs_ongoing_listitem_ic_calendar"
        app:layout_constraintTop_toBottomOf="@+id/employer_my_jobs_ongoing_listitem_ic_calendar"
        app:srcCompat="@drawable/ic_schedule" />

    <TextView
        android:id="@+id/employer_my_jobs_ongoing_listitem_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/ongoing_jobs_time"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/employer_my_jobs_ongoing_listitem_ic_schedule"
        app:layout_constraintStart_toStartOf="@+id/employer_my_jobs_ongoing_listitem_date" />

    <ImageView
        android:id="@+id/employer_my_jobs_ongoing_listitem_ic_employee"
        android:layout_width="@dimen/icon_width_height"
        android:layout_height="@dimen/icon_width_height"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/ic_description_employee_num"
        android:src="@drawable/ic_icon"
        app:layout_constraintEnd_toStartOf="@+id/employer_my_jobs_ongoing_listitem_employee_num"
        app:layout_constraintTop_toTopOf="@+id/employer_my_jobs_ongoing_listitem_position"
        app:srcCompat="@drawable/ic_icon" />

    <TextView
        android:id="@+id/employer_my_jobs_ongoing_listitem_employee_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/andika"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:text="@string/employer_employee_num"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/employer_my_jobs_ongoing_listitem_ic_employee"
        app:layout_constraintEnd_toEndOf="@+id/employer_my_jobs_ongoing_listitem_view_details_button" />


</androidx.constraintlayout.widget.ConstraintLayout>