<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/employer_my_jobs_footer_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/footerDividerHeight"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/home_button"
        app:layout_constraintEnd_toStartOf="@+id/my_jobs_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employer_my_jobs_footer_divider"
        app:srcCompat="@drawable/home_24px"
        app:tint="@color/grey"
        android:layout_width="@dimen/iconWidthHeight"
        android:layout_height="@dimen/iconWidthHeight"
        android:background="@android:color/transparent"
        android:contentDescription="@string/homeButtonDescription" />

    <ImageButton
        android:id="@+id/my_jobs_button"
        app:layout_constraintBottom_toBottomOf="@+id/home_button"
        app:layout_constraintEnd_toStartOf="@+id/my_profile_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:srcCompat="@drawable/work_24px"
        app:tint="@color/grey"
        android:layout_width="@dimen/iconWidthHeight"
        android:layout_height="@dimen/iconWidthHeight"
        android:background="@android:color/transparent"
        android:contentDescription="@string/myJobsButtonDescription" />

    <ImageButton
        android:id="@+id/my_profile_button"
        app:layout_constraintBottom_toBottomOf="@+id/my_jobs_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/my_jobs_button"
        app:srcCompat="@drawable/account_circle_24px"
        app:tint="@color/grey"
        android:layout_width="@dimen/iconWidthHeight"
        android:layout_height="@dimen/iconWidthHeight"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/myProfileButtonDescription" />
</merge>